# idempotency

./: .gitignore  ARCHITECTURE.md  LICENSE  PROJECT_IDEA.md  README.md  pyproject.toml
.github/workflows/: publish.yaml
examples/: basic_usage.py  storage_backends.py
idempotency/: __init__.py  decorator.py  exceptions.py  key.py  record.py  utils.py
idempotency/stores/: __init__.py  base.py  file.py  memory.py  redis.py
tests/: __init__.py  test_basic.py  test_key_generation.py  test_redis_store.py  test_stores.py
